# UW-EmbIoT-Project

./: .gitignore  README.md  west.yml
.github/workflows/: build.yml  release.yml
app/: CMakeLists.txt  bootloader.conf  mcumgr.conf  prj.conf
app/api/: api.options  api.proto
app/src/: main.c
boards/arm/stm32l496_cell/: Kconfig.board  Kconfig.defconfig  stm32l496_cell.dts  stm32l496_cell.yaml
drivers/: CMakeLists.txt  Kconfig
drivers/modem/: CMakeLists.txt  Kconfig
drivers/modem/quectel_bg96/: CMakeLists.txt  Kconfig  quectel-bg96.c  quectel-bg96.h
dts/bindings/modem/: quectel,bg96.yaml
tests/lib/custom_lib/: testcase.yaml
